src/test/ui/trivial-bounds/trivial-bounds-inconsistent-copy-reborrow.nll.stderr
error[E0596]: cannot borrow `**t` as mutable, as it is behind a `&` reference
  --> $DIR/trivial-bounds-inconsistent-copy-reborrow.rs:6:5
   |
LL | fn reborrow_mut<'a>(t: &'a &'a mut i32) -> &'a mut i32 where &'a mut i32: Copy {
   |                        --------------- help: consider changing this to be a mutable reference: `&'a mut &'a mut i32`
LL |     *t
   |     ^^ `t` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error[E0596]: cannot borrow `**t` as mutable, as it is behind a `&` reference
  --> $DIR/trivial-bounds-inconsistent-copy-reborrow.rs:10:6
   |
LL | fn copy_reborrow_mut<'a>(t: &'a &'a mut i32) -> &'a mut i32 where &'a mut i32: Copy {
   |                             --------------- help: consider changing this to be a mutable reference: `&'a mut &'a mut i32`
LL |     {*t}
   |      ^^ `t` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
